# confos

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agents/skills/confos/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BUILD_PLAN.md  CLI_CONTRACT.md  DECISIONS.md  ENRICHMENT_PLAN.md  PRODUCT.md  PROGRESS.md  RANKING.md  REFERENCES.md  SCHEMAS.md  VISUAL.md
docs/research/: name-conflict.md  openreview-api.md
scripts/: gen_assets.py  live-test.sh
src/confos/: __init__.py  _clickcompat.py  aliases.py  cli.py  config.py  console.py  errors.py  fts.py  jsonl.py  models.py  paths.py  schemas.py  serialize.py
src/confos/adapters/: __init__.py  base.py  openreview.py
src/confos/commands/: __init__.py  _render.py  authors.py  brief.py  doctor.py  enrich.py  export.py  index.py  ingest.py  init.py  orgs.py  papers.py  schema.py  stats.py  trends.py  venues.py  viz.py
src/confos/db/: __init__.py  connection.py  migrate.py  schema.sql
src/confos/db/repositories/: __init__.py  authors.py  orgs.py  papers.py  reviews.py  stats.py  venues.py
src/confos/normalize/: __init__.py  countries.py  orgs.py  topics.py
src/confos/output/: __init__.py  dashboard.py  graph.py  json.py  plain.py  progress.py  table.py
src/confos/services/: __init__.py  authors.py  brief.py  enrich.py  export.py  index.py  ingest.py  orgs.py  ranking.py  reviews.py  search.py  stats.py  trends.py  venues.py  viz.py
tests/: conftest.py  synthetic.py
tests/fixtures/cassettes/: mlmp_workshop.yaml  profiles.yaml
tests/integration/: test_authors_find_ranking.py  test_cli_phase0.py  test_error_paths.py  test_export.py  test_ingest_cassette.py  test_ingest_service.py  test_phase0_enrichment.py  test_phase1_enrich_service.py  test_phase1_profiles.py  test_phase2_reviews.py  test_phase5_brief.py  test_profiles_cassette.py  test_search_cli.py  test_search_service.py  test_trends_viz.py  test_venue_validation.py  test_venues_cli.py
tests/unit/: test_aliases.py  test_config.py  test_db_connection.py  test_fts.py  test_graph.py  test_help_text.py  test_json_envelope.py  test_jsonl.py  test_migrate.py  test_normalize.py  test_openreview_adapter.py  test_paths.py  test_render_helpers.py  test_schemas.py
