[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confos"
dynamic = ["version"]
description = "Conference intelligence in your terminal — for humans and agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Raphael Kalandadze" }]
keywords = [
    "conference",
    "openreview",
    "neurips",
    "iclr",
    "icml",
    "research",
    "papers",
    "cli",
    "agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "openreview-py>=2.0.0",
    "networkx>=3.2",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/RRaphaell/confos"
Repository = "https://github.com/RRaphaell/confos"
Issues = "https://github.com/RRaphaell/confos/issues"

[project.scripts]
confos = "confos.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "vcrpy>=6.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-networkx>=3.2",
    "types-pyyaml>=6.0",
]

[tool.hatch.version]
path = "src/confos/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/confos"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "B008",  # function call in default arg — typer's Option/Argument pattern needs this
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# openreview-py and vcrpy ship no type stubs.
module = ["openreview.*", "vcr.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "live: tests that hit the real OpenReview API (opt-in, skipped by default)",
]
